--- a/index.html
+++ b/index.html
@@ -5,66 +5,43 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Weird Cinema Archive</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
-
 <style>
 :root { --bg:#060608; --glass:rgba(255,255,255,.06); --blur:blur(20px); }
-* { box-sizing:border-box; }
-body { margin:0; padding:20px; background: radial-gradient(circle at top, #000000, #1a001f); color:white; font-family:Inter,sans-serif; min-height: 100vh; }
-
+body { margin:0; padding:20px; background: radial-gradient(circle at top, #000, #1a001f); color:white; font-family:Inter,sans-serif; min-height: 100vh; }
 header { text-align:center; margin-bottom:30px; }
-.header-img { width:120px; display:block; margin:0 auto 15px; border-radius:12px; }
-
-.progress { width:100%; max-width:420px; height:6px; margin:12px auto 0; border-radius:999px; background:rgba(255,255,255,.08); overflow:hidden; }
-#bar { display:block; height:100%; width:0%; background:linear-gradient(90deg,#9b6cff,#5ac8ff); transition:width .4s ease; }
-
+.progress { width:100%; max-width:420px; height:6px; margin:12px auto; border-radius:999px; background:rgba(255,255,255,.08); overflow:hidden; }
+#bar { display:block; height:100%; width:0%; background:linear-gradient(90deg,#9b6cff,#5ac8ff); transition:width .4s; }
 .controls { display:flex; gap:12px; flex-wrap:wrap; justify-content:center; margin-bottom:25px; }
 input, select { background:#111118; color:white; border:none; padding:12px 16px; border-radius:14px; font-size:14px; outline:none; }
-
-.grid { 
-    display:grid; 
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)); 
-    gap:20px; 
-    min-height: 200px; /* Force l'affichage de la zone */
-}
-
-.card { padding:18px; border-radius:22px; background:var(--glass); backdrop-filter:var(--blur); transition:.3s; cursor: pointer; border: 1px solid rgba(255,255,255,0.05); }
-.card img { width:100%; border-radius:12px; aspect-ratio: 2/3; object-fit: cover; background:#111; }
-.card h3 { margin:10px 0 5px; font-size:1.05rem; }
-.card p { font-size:.85rem; opacity:.7; line-height:1.4; }
-.badge { display:inline-block; margin-top:10px; font-size:10px; padding:4px 10px; border-radius:999px; background:rgba(255,255,255,0.1); }
-.seen { opacity:0.3; filter:grayscale(1); }
+.grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap:20px; }
+.card { padding:15px; border-radius:20px; background:var(--glass); backdrop-filter:var(--blur); cursor: pointer; transition: .3s; border: 1px solid rgba(255,255,255,0.05); }
+.card:hover { transform:translateY(-5px); background:rgba(255,255,255,0.1); }
+.card img { width:100%; border-radius:12px; aspect-ratio: 2/3; object-fit: cover; background:#222; }
+.seen { opacity:.3; filter:grayscale(1); }
+.badge { display:inline-block; margin-top:10px; font-size:10px; padding:4px 10px; border-radius:999px; background: rgba(255,255,255,0.1); text-transform: uppercase; }
 </style>
 </head>
-
 <body>
 
 <header>
-  <img src="images/logo.jpg" alt="Logo" class="header-img" onerror="this.style.display='none'">
   <h1>WEIRD CINEMA ARCHIVE</h1>
-  <div id="counter" style="margin-top:10px; opacity:0.8; font-size:0.9rem;">Initialisation...</div>
+  <div id="counter" style="opacity:0.7; font-size:0.9rem; margin-bottom:10px;">Initialisation...</div>
   <div class="progress"><span id="bar"></span></div>
 </header>
 
 <div class="controls">
-  <input type="text" id="search" placeholder="🔍 chercher un film">
+  <input type="text" id="search" placeholder="🔍 Chercher...">
   <select id="filter">
     <option value="All">Tous les genres</option>
-    <option>Weird</option>
-    <option>SF</option>
-    <option>Dystopie</option>
-    <option>Psyché</option>
-    <option>Horreur</option>
-    <option>Expérimental</option>
-    <option>Thriller</option>
-    <option>Queer</option>
+    <option>Weird</option><option>SF</option><option>Dystopie</option><option>Psyché</option>
+    <option>Horreur</option><option>Expérimental</option><option>Thriller</option><option>Queer</option>
   </select>
 </div>
 
 <div class="grid" id="grid"></div>
 
 <script>
-// --- DONNÉES ---
-// Remplace cette liste par ta liste complète de films
+// --- VERIFIE BIEN CETTE LISTE ---
 const films = [
  // --- WEIRD ---
   {title:"The Last Wave", year:1977, desc:"Weir Australie aborigène, apocalypse onirique mystique", category:"Weird", img:"images/The%20Last%20Wave.jpg"},
@@ -278,16 +255,19 @@ const films = [
   {title:"Suture", year:1993, desc:"Identité, doubles thriller expérimental", category:"Queer", img:"images/Suture.jpg"}
 ];
 
-];
-
-// --- LOGIQUE ---
-const savedSeen = JSON.parse(localStorage.getItem("seenFilms") || "{}");
+let savedSeen = {};
+try {
+    savedSeen = JSON.parse(localStorage.getItem("seenFilms") || "{}");
+} catch(e) {
+    savedSeen = {};
+}
 
 function render() {
   const grid = document.getElementById("grid");
   const filterVal = document.getElementById("filter").value;
   const searchTxt = document.getElementById("search").value.toLowerCase();
   
+  if(!grid) return;
   grid.innerHTML = "";
   let seenCount = 0;
 
@@ -303,33 +283,29 @@ function render() {
       card.className = `card ${isSeen ? 'seen' : ''}`;
       card.innerHTML = `
         <img src="${f.img}" onerror="this.src='https://via.placeholder.com/300x450/111/fff?text=Image+Manquante'">
-        <h3>${f.title} (${f.year})</h3>
+        <h3>${f.title}</h3>
+        <p style="font-size:0.8rem; opacity:0.6;">${f.year} — ${f.category}</p>
         <p>${f.desc}</p>
-        <div class="badge">${f.category}</div>
       `;
-      
       card.onclick = () => {
         savedSeen[f.title] = !savedSeen[f.title];
         localStorage.setItem("seenFilms", JSON.stringify(savedSeen));
         render();
       };
-      
       grid.appendChild(card);
     }
   });
 
-  // Mise à jour compteur
   document.getElementById("counter").innerText = `🎞️ ${seenCount} / ${films.length} films vus`;
-  document.getElementById("bar").style.width = (seenCount / films.length * 100) + "%";
+  document.getElementById("bar").style.width = films.length > 0 ? (seenCount / films.length * 100) + "%" : "0%";
 }
 
-// Listeners
+// Sécurité pour le chargement
 document.getElementById("search").addEventListener('input', render);
 document.getElementById("filter").addEventListener('change', render);
 
-// Lancement forcé
+// Lancement immédiat
 render();
 </script>
-
 </body>
 </html>
