Fix image filename case for The Cremator

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ const films = [
   {title:"The Greasy Strangler", year:2016, desc:"Jim Hosking humour noir, bizarrerie grotesque, dance macabre", category:"Weird", img:"images/The%20Greasy%20Strangler.jpg"},
   {title:"The Color of Pomegranates", year:1969, desc:"Parajanov poésie visuelle, abstraction culturelle, arménie surréaliste", category:"Weird", img:"images/The%20Color%20of%20Pomegranates.jpg"},
   {title:"Tampopo", year:1985, desc:"Itami comédie culinaire décalée, western du ramen, humour sensoriel", category:"Weird", img:"images/Tampopo.jpg"},
-  {title:"The Cremator", year:1969, desc:"Tchécoslovaquie, obsession crématorium, montage hypnotique noir", category:"Weird", img:"images/The%20Cremator.jpg"},
+  {title:"The Cremator", year:1969, desc:"Tchécoslovaquie, obsession crématorium, montage hypnotique noir", category:"Weird", img:"images/The%20cremator.jpg"},
   {title:"Angst", year:1983, desc:"Autriche, POV tueur, caméra révolutionnaire, ultra-réaliste sombre", category:"Weird", img:"images/Angst.jpg"},
   {title:"On the Silver Globe", year:1988, desc:"Żuławski épopée lunaire maudite, philosophie sauvage, SF mystique", category:"Weird", img:"images/On%20the%20Silver%20Globe.jpg"},
   {title:"Victoria", year:2015, desc:"Schipper Berlin un seul plan-séquence, club techno, braquage, dérive nocturne", category:"Weird", img:"images/Victoria.jpg"},
