--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ input, select { background:#111118; color:white; border:none; padding:12px 16px;
 <body>
 
 <header>
+  <img src="./images/logo.jpg" alt="Logo" class="header-img" onerror="console.log('Logo introuvable à cette adresse');">
   <h1>WEIRD CINEMA ARCHIVE</h1>
   <div id="counter" style="opacity:0.7; font-size:0.9rem; margin-bottom:10px;">Initialisation...</div>
   <div class="progress"><span id="bar"></span></div>
