--- a/index.html
+++ b/index.html
@@ -8,7 +8,36 @@
 <style>
 :root { --bg:#060608; --glass:rgba(255,255,255,.06); --blur:blur(20px); }
 body { margin:0; padding:20px; background: radial-gradient(circle at top, #000, #1a001f); color:white; font-family:Inter,sans-serif; min-height: 100vh; }
-header { text-align:center; margin-bottom:30px; }
+
+/* --- AJUSTEMENT LOGO --- */
+header { 
+  text-align:center; 
+  margin-bottom:30px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header-img { 
+  width: 100%;
+  max-width: 80px; /* Taille du logo sur ordinateur */
+  height: auto;
+  border-radius: 15px; /* Optionnel: arrondit un peu les coins du logo */
+  margin-bottom: 15px;
+  display: block;
+  transition: transform 0.3s ease;
+}
+
+/* Responsive Mobile pour le logo et le titre */
+@media (max-width: 600px) {
+  .header-img {
+    max-width: 60px; /* Encore plus petit sur mobile */
+  }
+  h1 {
+    font-size: 1.5rem; /* Réduit un peu le titre sur mobile */
+  }
+}
+
 .progress { width:100%; max-width:420px; height:6px; margin:12px auto; border-radius:999px; background:rgba(255,255,255,.08); overflow:hidden; }
 #bar { display:block; height:100%; width:0%; background:linear-gradient(90deg,#9b6cff,#5ac8ff); transition:width .4s; }
 .controls { display:flex; gap:12px; flex-wrap:wrap; justify-content:center; margin-bottom:25px; }
@@ -24,7 +53,7 @@ input, select { background:#111118; color:white; border:none; padding:12px 16px;
 <body>
 
 <header>
-  <img src="./images/logo.jpg" alt="Logo" class="header-img" onerror="console.log('Logo introuvable à cette adresse');">
+  <img src="./images/logo.jpg" alt="Logo" class="header-img" onerror="this.style.opacity='0';">
   <h1>WEIRD CINEMA ARCHIVE</h1>
   <div id="counter" style="opacity:0.7; font-size:0.9rem; margin-bottom:10px;">Initialisation...</div>
   <div class="progress"><span id="bar"></span></div>
